Fix aside spacing on thema.html

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -3,10 +3,8 @@
 	border-top: 1px solid $line-color;
 }
 
+.aside,
 #home {
-	h2 {
-		text-align: center;
-	}
 	.divider-top {
 		border-top: 1px solid #fff;
 		&::before {
